force-app/main/default/objects/Approver_Assignment__c/Approver_Assignment__c.object-meta.xml
<CustomObject>
    <label>Approver Assignment</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Approver Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approver Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>