force-app/main/default/objects/Approver_Assignment__c/fields/Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Assignments2</relationshipName>
    <type>Lookup</type>
</CustomField>