force-app/main/default/objects/Approver_Assignment__c/fields/Sourcing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Entity__c</fullName>
    <label>Sourcing Entities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sourcing_Entities</valueSetName>
    </valueSet>
</CustomField>